--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -21,6 +21,15 @@ h1,h2,h3,h4,h5,h6{
 	font-weight: 700;
 }
 
+.layout-header
+{ 
+  background-color: #0076A6;
+  opacity: 0.5;
+  width: 100%;
+  height:20%;
+
+}
+
 
 article,
 aside,
