--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -31,6 +31,14 @@ h1,h2,h3,h4,h5,h6{
 }
 
 
+
+
+/*---------------------Footer---------------------------*/
+.muted{
+  margin: 22.5px 22.5px 15px 15px;
+  float: right;
+
+
 article,
 aside,
 details,
