--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -21,16 +21,38 @@ h1,h2,h3,h4,h5,h6{
 	font-weight: 700;
 }
 
-.layout-header
+section
+{
+  background-color: #82C11D;
+  opacity: 0.5;
+}
+
+.header
 { 
   background-color: #0076A6;
   opacity: 0.5;
-  width: 100%;
-  height:20%;
+  display: flex;
+  max-height: 100px;
+  background-attachment: fixed;
 
+
+}
+.logo:nth-child(1)
+{
+  width: 100px;
+  height: 100px;
+  margin: auto;
+}
+.logo:nth-child(2)
+{
+  max-height: 100px;
+  margin: auto;
 }
 
 
+
+
+*/
 article,
 aside,
 details,
