header with right colors

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -21,19 +21,20 @@ h1,h2,h3,h4,h5,h6{
 	font-weight: 700;
 }
 
-section
+.section
 {
-  background-color: #82C11D;
-  opacity: 0.5;
+  background-color: #0076A680;
+
 }
 
 .header
 { 
-  background-color: #0076A6;
-  opacity: 0.5;
+  background-color: #82C11DA8 ;
   display: flex;
   max-height: 100px;
   background-attachment: fixed;
+  background-blend-mode: 
+
 
 
 }
@@ -42,17 +43,26 @@ section
   width: 100px;
   height: 100px;
   margin: auto;
+
 }
 .logo:nth-child(2)
 {
   max-height: 100px;
   margin: auto;
+
+}
+.logo:nth-child(3)
+{
+  height: 100px;
+  width: 100px;
+  background-color: white;
+  text-align: center;
 }
 
 
 
 
-*/
+
 article,
 aside,
 details,
@@ -68,10 +78,6 @@ section,
 summary {
   display: block;
 }
-
-
-
-
 
 
 
