--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -25,6 +25,7 @@ h1,h2,h3,h4,h5,h6{
   background-color: #0076A680;
 
 }
+/*---------------------header---------------------------*/
 
 .header
 { 
@@ -32,10 +33,7 @@ h1,h2,h3,h4,h5,h6{
   display: flex;
   max-height: 100px;
   background-attachment: fixed;
-  background-blend-mode: 
-
-
-
+  margin-bottom: 20px;
 }
 .logo:nth-child(1)
 {
@@ -58,6 +56,7 @@ h1,h2,h3,h4,h5,h6{
   text-align: center;
 }
 
+/*---------------------fin header---------------------------*/
 
 
 
@@ -67,6 +66,7 @@ h1,h2,h3,h4,h5,h6{
   padding-left: 15px;
   padding-right: 15px;
 }
+
 @media (min-width: 768px) {
   .container {
     width: 750px;
@@ -96,6 +96,9 @@ h1,h2,h3,h4,h5,h6{
   float: left;
 }
 .footer {
+  font-family: lato, sans-serif;
+  font-weight: 700;
+  font-style: bold;
   position: fixed;
   left: 0;
   bottom: 0;
@@ -116,6 +119,9 @@ h1,h2,h3,h4,h5,h6{
 .inline{
   display: inline-block;
 }
+
+/*---------------------fin footer---------------------------*/
+
 
 article,
 aside,
