--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,30 +1,3 @@
-html {
-  font-family: sans-serif;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  scroll-behavior: smooth;
-}
-body {
-  margin: 0;
-}
-
-p{
-	font-family: lato;
-	font-style: normal;
-	font-weight: 300;
-}
-
-h1,h2,h3,h4,h5,h6{
-	font-family: lato;
-	font-style: normal;
-	font-weight: 700;
-}
-
-.section
-{
-  background-color: #0076A680;
-
-}
 /*---------------------header---------------------------*/
 
 .header
@@ -83,9 +56,63 @@ h1,h2,h3,h4,h5,h6{
   }
 }
 
+/*---------------------Search bar--------------------------CR-*/
 
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
 
-/*---------------------Footer---------------------------*/
+.searchTerm {
+  width: 100%;
+  border: 3px solid #000;
+  border-right: none;
+  padding: 5px;
+  height: 20px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #000;
+}
+
+.searchTerm:focus{
+  color: #0b006b;
+  font-weight: 700;
+}
+
+.searchButton {
+  width: 90px;
+  height: 36px;
+  border: 3px solid #000;
+  padding: 0 0 0 0;
+  background: #fff;
+  text-align: center;
+  color: #000;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 14px;
+  font-style: black;
+}
+.searchButton:hover,
+.searchTerm:hover {
+  background: #ccc;
+} 
+
+.searchButton p{
+  margin: 0;
+}
+
+.wrap{
+  margin-bottom: 20px;
+  width: 90%;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+/*---------------------Fin Search Bar-------------------*/
+
+/*---------------------Footer-------------------------CR--*/
 .float-right{
   margin-right: 0px;
   float: right;
@@ -122,6 +149,35 @@ h1,h2,h3,h4,h5,h6{
 
 /*---------------------fin footer---------------------------*/
 
+
+/*---------------------Basic and font--------------------------CR-*/
+html {
+  font-family: sans-serif;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  scroll-behavior: smooth;
+}
+body {
+  margin: 0;
+}
+
+p{
+  font-family: lato;
+  font-style: normal;
+  font-weight: 300;
+}
+
+h1,h2,h3,h4,h5,h6{
+  font-family: lato;
+  font-style: normal;
+  font-weight: 700;
+}
+
+.section
+{
+  background-color: #0076A680;
+
+}
 
 article,
 aside,
