--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -2,31 +2,42 @@
 
 .header
 { 
+  height: 100%;
+  width:100%;
   background-color: #82C11DA8 ;
-  display: flex;
-  max-height: 100px;
-  background-attachment: fixed;
-  margin-bottom: 20px;
+  background-attachment: fixed;  
 }
-.logo:nth-child(1)
+.home
 {
-  width: 100px;
-  height: 100px;
-  margin: auto;
+  width: auto;
+  height: 100%;
+  display: inline-block;
+  float: left;
 
 }
-.logo:nth-child(2)
+.logo
 {
-  max-height: 100px;
-  margin: auto;
-
+  width: auto;
+  height: 100%;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%)
 }
-.logo:nth-child(3)
+.rayon
 {
-  height: 100px;
-  width: 100px;
+  width: 10%;
+  height: 100%;
   background-color: white;
   text-align: center;
+  display: inline-block;
+  float: right;
+  font-size: 2.5vh;
+}
+.rayon h3{
+  margin : 0;
+  position: relative;
+  top: 50%;
+  transform: translate(0, -50%)
 }
 
 /*---------------------fin header---------------------------*/
@@ -34,6 +45,7 @@
 
 
 .container {
+  height: 100%;
   margin-right: auto;
   margin-left: auto;
   padding-left: 15px;
@@ -123,21 +135,20 @@
   float: left;
 }
 .footer {
+  height: 100%;
+  width:100%;
   font-family: lato, sans-serif;
   font-weight: 700;
   font-style: bold;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
+  
   background-color: white;
   color: black;
   text-align: center;
 }
 .hrstyle{
   width: 100%;
-  height: 0.5px;
-  margin-bottom: 0px;
+  height: 0.05vh;
+  margin :0;
   color: gray;
   background-color: gray;
   border : solid;
@@ -145,6 +156,11 @@
 }
 .inline{
   display: inline-block;
+}
+.footer p{
+  margin-top: 2px;
+  margin-bottom: 2px;
+  font-size:2.7vh;
 }
 
 /*---------------------fin footer---------------------------*/
@@ -156,9 +172,19 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   scroll-behavior: smooth;
+  height: 100%;
+  width:100%;
 }
+header{
+  height: 12%;
+  width:100%;
+}
+
+
 body {
   margin: 0;
+  height: 100%;
+  width:100%; 
 }
 
 p{
@@ -173,10 +199,18 @@ h1,h2,h3,h4,h5,h6{
   font-weight: 700;
 }
 
-.section
+.layout-content
 {
-  background-color: #0076A680;
-
+  height: 82%;
+  width: 100%;
+}
+.layout-footer
+{
+  height: 5%;
+  width: 100%;
+  position: fixed;
+  left: 0;
+  bottom: 0;
 }
 
 article,
