--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,31 +1,134 @@
-html {
+html
+{
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   scroll-behavior: smooth;
 }
-body {
+
+body
+{
   margin: 0;
+  background-color: #abdfe9;
 }
 
-p{
+p
+{
 	font-family: lato;
 	font-style: normal;
 	font-weight: 300;
 }
 
-h1,h2,h3,h4,h5,h6{
+h1,h2,h3,h4,h5,h6
+{
 	font-family: lato;
 	font-style: normal;
 	font-weight: 700;
 }
 
-.section
-{
-  background-color: #0076A680;
+/* ------------------------------------------------------ Taff de CL -----------------------------------------------------*/
 
+#conteneur_vert
+{
+  display: flex;
+  flex-direction: column;
+  height: 500px;
 }
 
+#conteneur1
+{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+#conteneur2
+{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 25px;
+}
+
+#conteneur3
+{
+  display: flex;
+  justify-content: center;
+  margin-top: 35px;
+}
+
+.message
+{
+  background-color : #F70808;
+  width : 300px;
+  height: 110px;
+  padding-top: 35px;
+  text-align: center;
+  border : 4px black groove;
+  border-radius: 10px;
+}
+
+.message p
+{
+  font-family: sans-serif;
+  color : white;
+  font-size : 30px;
+  margin: auto;
+}
+
+.carte_rayon
+{
+  background-color: #43F80E;
+  width : 400px;
+  height : 80px;
+  padding-top : 40px;
+  text-align: center;
+  border : 4px black groove;
+  border-radius: 10px;
+}
+
+.carte_rayon a
+{
+  color : white;
+  font-size : 30px;
+  text-decoration: none;
+}
+
+.detail_produit
+{
+  background-color: #1C6C05;
+  width : 400px;
+  height : 80px;
+  padding-top : 40px;
+  text-align: center;
+  border : 4px black groove;
+  border-radius: 10px;
+}
+
+.detail_produit a
+{
+  color: white;
+  font-size : 30px;
+  text-decoration: none;
+}
+
+.carte_magasin
+{
+  background-color : #2AFBF8;
+  width : 300px;
+  height: 50px;
+  padding-top: 15px;
+  text-align: center;
+  border : 4px black groove;
+  border-radius: 10px;
+}
+
+.carte_magasin a
+{
+  color : black;
+  font-size : 30px;
+  text-decoration: none;
+}
+
+/* ------------------------------------------------------ Fin taff de CL -----------------------------------------------------*/
 .header
 { 
   background-color: #82C11DA8 ;
@@ -33,23 +136,21 @@ h1,h2,h3,h4,h5,h6{
   max-height: 100px;
   background-attachment: fixed;
   background-blend-mode: 
-
-
-
 }
+
 .logo:nth-child(1)
 {
   width: 100px;
   height: 100px;
   margin: auto;
-
 }
+
 .logo:nth-child(2)
 {
   max-height: 100px;
   margin: auto;
-
 }
+
 .logo:nth-child(3)
 {
   height: 100px;
@@ -61,24 +162,32 @@ h1,h2,h3,h4,h5,h6{
 
 
 
-.container {
+.container
+{
   margin-right: auto;
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
 }
-@media (min-width: 768px) {
-  .container {
+
+@media (min-width: 768px)
+{
+  .container
+  {
     width: 750px;
   }
 }
-@media (min-width: 992px) {
-  .container {
+@media (min-width: 992px)
+{
+  .container
+  {
     width: 970px;
   }
 }
-@media (min-width: 1200px) {
-  .container {
+@media (min-width: 1200px)
+{
+  .container
+  {
     width: 1170px;
   }
 }
@@ -86,16 +195,20 @@ h1,h2,h3,h4,h5,h6{
 
 
 /*---------------------Footer---------------------------*/
-.float-right{
+.float-right
+{
   margin-right: 0px;
   float: right;
 }
 
-.float-left{
+.float-left
+{
   margin-right: 0px;
   float: left;
 }
-.footer {
+
+.footer
+{
   position: fixed;
   left: 0;
   bottom: 0;
@@ -104,7 +217,9 @@ h1,h2,h3,h4,h5,h6{
   color: black;
   text-align: center;
 }
-.hrstyle{
+
+.hrstyle
+{
   width: 100%;
   height: 0.5px;
   margin-bottom: 0px;
@@ -113,7 +228,9 @@ h1,h2,h3,h4,h5,h6{
   border : solid;
   border-radius: 10px;
 }
-.inline{
+
+.inline
+{
   display: inline-block;
 }
 
@@ -129,34 +246,42 @@ main,
 menu,
 nav,
 section,
-summary {
+summary
+{
   display: block;
 }
 
 
 
-@font-face {
+@font-face
+{
   font-family: 'lato';
   src: url('../fonts/lato-black-webfont.eot');
   src: url('../fonts/lato-black-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/lato-black-webfont.svg#latoblack') format('svg'), url('../fonts/lato-black-webfont.woff') format('woff'), url('../fonts/lato-black-webfont.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
-@font-face {
+
+@font-face
+{
   font-family: 'lato';
   src: url('../fonts/lato-italic-webfont.eot');
   src: url('../fonts/lato-italic-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/lato-italic-webfont.svg#latoitalic') format('svg'), url('../fonts/lato-italic-webfont.woff') format('woff'), url('../fonts/lato-italic-webfont.ttf') format('truetype');
   font-weight: 400;
   font-style: italic;
 }
-@font-face {
+
+@font-face
+{
   font-family: 'lato';
   src: url('../fonts/lato-regular-webfont.eot');
   src: url('../fonts/lato-regular-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/lato-regular-webfont.svg#latoregular') format('svg'), url('../fonts/lato-regular-webfont.woff') format('woff'), url('../fonts/lato-regular-webfont.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
-@font-face {
+
+@font-face
+{
   font-family: 'lato';
   src: url('../fonts/lato-light-webfont.eot');
   src: url('../fonts/lato-light-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/lato-light-webfont.svg#latolight') format('svg'), url('../fonts/lato-light-webfont.woff') format('woff'), url('../fonts/lato-light-webfont.ttf') format('truetype');
