--- a/CSS/csscartemagasin.css
+++ b/CSS/csscartemagasin.css
@@ -1,7 +1,26 @@
- .carte img{
- 	margin-bottom: 20px;
-	width: 90%;
+.carte {
+	width: auto;
+	height: 90%;
+}
+.carte img{
+	width: auto;
+	height: 100%;
 	position: relative;
 	left: 50%;
 	transform: translate(-50%);
- }
+
+}
+.layout-content .container{
+	padding-top: 10px;
+}
+
+.wrap{
+	margin-top: 0;
+	
+}
+
+.found{
+	position: absolute;
+	top:20%;
+	left : 5%;
+}
