--- a/CSS/CSS_detail_produit.css
+++ b/CSS/CSS_detail_produit.css
@@ -140,7 +140,7 @@
 	border: 2px solid #82C11D;
 	flex-direction: column;
 	flex-wrap: wrap;
-
+	visibility: hidden;
 }
 
 .element{
@@ -170,3 +170,25 @@
 .layout-footer {
 	position: static;
 }
+
+.research {
+  width: 100%;
+  height: auto;
+  border: 2px solid #000;
+  padding: 2px;
+  background: #F5F5F5;
+  text-align: center
+  cursor: pointer;
+  outline: none;
+  font-size: 110%;
+  border-radius: 10px;
+}
+
+.research:hover {
+  background-color: #C0C0C0 ;
+} 
+
+
+.searchTerm {
+  border: 3px solid #000;
+ }
