--- a/CSS/css_accueuil.css
+++ b/CSS/css_accueuil.css
@@ -4,21 +4,20 @@
 {
   display: flex;
   flex-direction: column;
-  height: 500px;
 }
 
 #conteneur1
 {
   display: flex;
+  margin-top: 35px;
   justify-content: space-around;
-  margin-top: 50px;
 }
 
 #conteneur_vert2
 {
   display: flex;
   flex-direction: column;
-  margin-top: auto;
+  justify-content: space-around;
 }
 
 #conteneur2
@@ -47,7 +46,20 @@
   font-family: sans-serif;
   color : white;
   font-size : 30px;
+}
+
+#aide
+{
+  background-color : #000000;
+  width: 150px;
+  height: 150px;
+  text-align: center;
+  border-radius : 75px;
   margin: auto;
+
+  font-family: sans-serif;
+  color : white;
+  font-size : 130px;
 }
 
 #carte_rayon
