--- a/CSS/carte_rayon.css
+++ b/CSS/carte_rayon.css
@@ -1,17 +1,17 @@
-.content
+.content /* tout entre le header et le footer */
 {
 	background-color: #0076A680;
-	height: 83%;
+	height: 83%;  /* 100% - tailleHeader - tailleFooter */
 	display: flex;
 	flex-direction: column;
 }
 
+/* toutes les tailles en % pour que la taille de la fenetre et de ses éléments s'adaptent */
+
 .top
 {
 	display: flex;
-	flex-grow: 2;
     justify-content: space-around;
-    /*background-color: #57171e;*/
     height: 40%;
 }
 
@@ -24,13 +24,12 @@
 
 #localisation_borne
 {
-	/*background-color: #ad39a2;*/
 	width: 50%;
 	display: flex;
 
 }
 
-#img_loc
+#img_loc  /* image "you are here" */
 {
 	margin-left: 30%;
 	margin-bottom: 2%;
@@ -40,7 +39,6 @@
 
 #legende
 {
-	/*background-color: #39ad98;*/
 	flex-basis: 50%;
 	text-align: right;
 	width: 50%;
@@ -51,26 +49,46 @@
 	margin: 5px;
 }
 
-
 .bottom
 {
 	display: flex;
 	flex-grow: 2;
-	/*background-color: #ebb434;*/
-	justify-content: space-around;
 	height: 40%;
 }
 
-
-
-.rayonpict
+.bottom_side
 {
-	
-	width: 65%;
+	width: 17%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.bottom_center
+{
+	width: 66%;
+}
+#rayonpict1
+{
+	width: 66%;
 	height: 90%;
 }
 
-.wrap
+#rayonpict2  /* rayonPict1 et rayonPict2 (les img corrspondant au rayon) sont différenciées car leurs conteneurs n'ont pas la même taille */
+{
+	width: 100%;
+	height: 90%;
+}
+
+#voirDescriptif  /* bouton */
+{
+	height: 20%;
+	width: 80%;
+	min-height:60px; /* pour que le texte reste dans le bouton */
+	min-width: 60px;
+}
+
+.wrap  /* barre de recherche */
 {
 	height: 10%;
 }
