--- a/CSS/csscartemagasin.css
+++ b/CSS/csscartemagasin.css
@@ -1,3 +1,6 @@
+/*Concepteur Corentin Réngé */
+
+/*adaptation dinamique de l'image carte du magasin, centrage sur la page*/
 .carte {
 	width: auto;
 	height: 90%;
@@ -10,6 +13,15 @@
 	transform: translate(-50%);
 
 }
+/*positionnement du form et des selects*/
+.found{
+	width: 10%;
+	position: absolute;
+	top:20%;
+	left : 0.5%;
+}
+
+/*surimplémentation pour enlever certains padding ou margin */
 .layout-content .container{
 	padding-top: 10px;
 }
@@ -19,9 +31,3 @@
 
 }
 
-.found{
-	width: 10%;
-	position: absolute;
-	top:20%;
-	left : 0.5%;
-}
